--- a/my-todo-app/src/index.css
+++ b/my-todo-app/src/index.css
@@ -23,9 +23,20 @@ button {
   color: #000000;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="email"] {
   font-size: 20px;
   padding: 15px;
+  border: none;
+  background-color: #ccf6f6;
+  color: #000000;
+  border-radius: 5px;
+}
+
+textarea {
+  font-size: 20px;
+  padding: 25px 15px;
+  height: 50px;
   border: none;
   background-color: #ccf6f6;
   color: #000000;
