--- a/my-todo-app/src/index.css
+++ b/my-todo-app/src/index.css
@@ -1,7 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .todo {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
-  margin-top: 100px;
 }
 
 h1 {
@@ -58,12 +63,13 @@ li {
   align-items: center;
 }
 
-ol li {
+nav {
   margin: 0;
   padding: 0;
   width: 200px;
   background-color: #244141;
   overflow: auto;
+  height: 100vh;
 }
 
 ol li a {
