--- a/my-todo-app/src/index.css
+++ b/my-todo-app/src/index.css
@@ -94,3 +94,13 @@ ul {
   text-decoration: none;
   color: #a6edf2;
 }
+
+.sidebar img {
+  width: 35px;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
