--- a/my-todo-app/src/index.css
+++ b/my-todo-app/src/index.css
@@ -7,6 +7,17 @@
 .todo {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
+  background-color: #ffffff;
+  width: 800px;
+}
+
+.todo-box {
+  display: flex;
+  justify-content: center;
+  padding: 8rem;
+  height: 100%;
+  width: 100%;
+  background-color: #d9d9d9;
 }
 
 .screen {
@@ -15,13 +26,18 @@
 
 .main {
   display: flex;
+  flex-direction: column;
   width: 100%;
   align-items: center;
-  justify-content: center;
 }
 
 h1 {
   font-size: 20px;
+}
+
+h2 {
+  margin-top: 4rem;
+  flex: 0.1 1 0;
 }
 
 button {
@@ -34,6 +50,11 @@ button {
   cursor: pointer;
 }
 
+.task-add {
+  display: flex;
+  padding: 10px;
+}
+
 .button:hover {
   background-color: #ccf6f6;
   color: #000000;
@@ -41,6 +62,7 @@ button {
 
 input[type="text"],
 input[type="email"] {
+  width: 100%;
   font-size: 20px;
   padding: 15px;
   border: none;
@@ -50,6 +72,7 @@ input[type="email"] {
 }
 
 textarea {
+  width: auto;
   font-size: 20px;
   padding: 25px 15px;
   height: 50px;
@@ -72,6 +95,11 @@ textarea {
   border-radius: 5px;
   display: flex;
   align-items: center;
+}
+
+.text {
+  flex: 1 1 0;
+  text-align: left;
 }
 
 .sidebar {
@@ -145,5 +173,11 @@ textarea {
   }
   .mobile-link img {
     width: 50px;
+  }
+  .todo {
+    width: 350px;
+  }
+  .todo-box {
+    padding: 1rem;
   }
 }
