--- a/my-todo-app/src/index.css
+++ b/my-todo-app/src/index.css
@@ -13,7 +13,8 @@
 
 .todo-box {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 8rem;
   height: 100%;
   width: 100%;
